--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "dev:server": "tsx watch src/server/index.ts",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "tsc -b && vite build",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:all": "npm run build && npm run build:server",
+    "start": "node dist/server/index.js",
+    "start:server": "node --loader tsx src/server/index.ts",
+    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"No tests yet\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
     "express": "^4.21.2",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
@@ -31,8 +38,6 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
