--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "tsx watch src/server/index.ts",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "tsc -b && vite build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:all": "npm run build && npm run build:server",
     "start": "node dist/server/index.js",
-    "start:server": "node --loader tsx src/server/index.ts",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
     "lint": "eslint .",
     "test": "echo \"No tests yet\""
@@ -27,6 +24,7 @@
     "tailwindcss": "^3.4.17",
     "postcss": "^8.5.1",
     "autoprefixer": "^10.4.20",
+    "tsx": "^4.19.2",
     "express": "^4.21.2",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
@@ -44,8 +42,6 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^24.10.1",
-    "eslint": "^9.39.1",
-    "tsx": "^4.19.2",
-    "concurrently": "^9.1.0"
+    "eslint": "^9.39.1"
   }
 }
