fix: move rollup platform binaries to optionalDependencies

--- a/package.json
+++ b/package.json
@@ -14,28 +14,32 @@
     "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "typescript": "~5.9.3",
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.5.1",
-    "autoprefixer": "^10.4.20",
-    "tsx": "^4.19.2",
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.454.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-dropzone": "^14.4.0",
-    "react-router-dom": "^7.13.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^3.4.0"
+      "@google/generative-ai": "^0.21.0",
+      "@supabase/supabase-js": "^2.39.0",
+      "@types/react": "^19.2.5",
+      "@types/react-dom": "^19.2.3",
+      "@vitejs/plugin-react": "^5.1.1",
+      "typescript": "~5.9.3",
+      "vite": "^5.0.0",
+      "tailwindcss": "^3.4.17",
+      "postcss": "^8.5.1",
+      "autoprefixer": "^10.4.20",
+      "tsx": "^4.19.2",
+      "express": "^4.21.2",
+      "cors": "^2.8.5",
+      "multer": "^1.4.5-lts.1",
+      "dotenv": "^16.4.7",
+      "lucide-react": "^0.454.0",
+      "react": "^19.2.0",
+      "react-dom": "^19.2.0",
+      "react-dropzone": "^14.4.0",
+      "react-router-dom": "^7.13.0",
+      "clsx": "^2.1.1",
+      "tailwind-merge": "^3.4.0"
+    },
+      "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.59.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.59.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
