--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:server": "tsc --project tsconfig.node.json",
+    "build:server": "tsc --project tsconfig.server.json",
     "build:all": "npm run build && npm run build:server",
     "start": "node dist/server/index.js",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
