--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,7 +5,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "outDir": "./dist/server",
-    "rootDir": "./src/server",
+    "rootDir": "./src",
     "skipLibCheck": true,
     "strict": true,
     "noUnusedLocals": true,
