--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ES2023",
     "lib": ["ES2023"],
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "outDir": "./dist/server",
     "rootDir": "./src/server",
     "skipLibCheck": true,
